syntax = "proto3";

package pb_generate;
option go_package = "./pb_generate;pb";

enum Constants {
  Default = 0x0000; //0
  Magic = 0xC0C0;
}

enum SerializeFlag {
  PlainSerial = 0x0; //普通文本
  PbSerial = 0x1; //pb
  JsonSerial = 0x2;

  MaxSerial = 0xF;
}

enum AuthCode {
  AuthSuccess = 0x0;
  AuthFailure = 0x1;
}

enum ClientType {
  Unknown = 0x0;
  Ios = 0x1;
  Android = 0x2;
  H5 = 0x3;
}

enum Endpoint {
  Empty = 0x0;
  Client = 0x1; //客户端
  ServerConnCenter = 0x2; //长连接服务
  ServerPushCenter = 0x3; //推送中心
  ServerThing = 0x4; //物联网服务

  ServerEndpointMax = 0xFF;
}

enum MsgType {
  Min = 0x000; //0

  //client-->server奇数
  //client<--server偶数

  //-----ack-----
  ClientAck = 0x001;
  ServerAck = 0x002;
  //-----heartbeat----
  Heartbeat = 0x003;
  //-----kick out-----
  KickOut = 0x004;




  //-----auth----
  AuthLaunch = 0x010;
  AuthVerifyReq = 0x011;
  AuthVerifyResp = 0x012;



  //-----thing-----
  PropEmit = 0x020;
  PropUpload = 0x021;

  //-----push-----

}

message Header {
  MsgType msgType = 1;
  uint64 msgId = 2;
  Endpoint src = 3;
  Endpoint dest = 4;
  UserInfo userInfo = 5;
  uint32 version = 6; // 0， 升级版本递增1
  uint64 timestamp = 7; //unix时间戳，毫秒
  bool ack = 8; //是否进行应答，确认消息收到
}

message UserInfo {
  string uid = 1; //用户id
  string did = 2; //设备id
  ClientType clientType = 3;
  string clientVer = 4;
}

enum ContentType {
  Pb = 0;
  Plain = 1;
  Json = 2;
}




